feat: aprendendo sobre o feat

--- a/DSA/cap06/cap06_04.ipynb
+++ b/DSA/cap06/cap06_04.ipynb
@@ -91,6 +91,52 @@
     "# usando expressão lambda\n",
     "list(map(lambda T: (5/9) * (T-32), temperaturas))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9753ca0d",
+   "metadata": {},
+   "source": [
+    "## filter\n",
+    "\n",
+    "A função `filter()` é uma função que filtra elementos de uma estrutura de dados interaveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9258f32d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verificarPar(num):\n",
+    "    if num % 2 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ff1fdb0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[42, 58, 94, 76, 60, 38]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = [42, 87, 13, 65, 29, 73, 9, 58, 94, 31, 76, 21, 60, 5, 38]\n",
+    "list(filter(verificarPar, lista))"
+   ]
   }
  ],
  "metadata": {
